# document_intelligence_adv_v2

./: .env.example  .gitignore  CLAUDE.md  PE-Document-Intelligence-Azure-Architecture.pptx  README.md  architecture.md  calibration-profile.json  claude-progress.txt  design.md  doc_intelligence_design.pptx  doc_intelligence_design_v2.pptx  docker-compose.yml  evals.sh  features.json  init.sh  package-lock.json  package.json  playwright.config.ts  project-manifest.json
backend/: .coverage  .coverage 2  .coverage 3  .env.example  README.md  alembic.ini  config.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_audit_logs.py  002_add_user_id.py  003_add_pipeline_tracking.py  004_add_eval_runs.py
backend/evals/: README.md  cli.py  dataset_sync.py  regression_harvest.py
backend/evals/datasets/: __init__.py  classification_golden.jsonl  extraction_golden.jsonl  pipeline_golden.jsonl  rag_golden.jsonl  regression_corrections.jsonl  sql_golden.jsonl  summary_golden.jsonl
backend/evals/evaluators/: rubric.py  sql.py  trajectory.py
backend/evals/rubrics/: agent_trajectory.yaml  extraction.yaml  sql.yaml  summary.yaml
backend/evals/runners/: _base.py  run_agentic_rag.py  run_classification.py  run_extraction.py  run_pipeline.py  run_rag.py  run_sql.py  run_summary.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  backends.py  classifier.py  deepagents_stub.py  extractor.py  factory.py  judge.py  llm.py  orchestrator.py  rag_retriever.py  summarizer.py
backend/src/api/: app.py  dependencies.py  routes.py  seed_data.py  shutdown.py
backend/src/audit/: __init__.py  event.py  queue.py
backend/src/bulk/: __init__.py  event_bus.py  gates.py  langgraph_stub.py  nodes.py  pipeline.py  service.py  state.py  wait_nodes.py
backend/src/config/: __init__.py  settings.py
backend/src/data_agent/: __init__.py  agent.py  executor.py  schema.py
backend/src/db/: __init__.py  connection.py  enums.py  models.py
backend/src/graph_nodes/: __init__.py  classifier.py  extractor.py  judge.py  llm.py  rag_retriever.py  summarizer.py
backend/src/observability/: tracing.py
backend/src/parser/: reducto.py
backend/src/pipeline/: __init__.py  runner.py
backend/src/rag/: agent.py  chunker.py  formatting.py  reranker.py  weaviate_client.py
backend/src/services/: document_service.py  extraction_service.py  hashing.py  ingest_service.py  parse_service.py  rag_service.py  state_machine.py  summarize_service.py
backend/src/storage/: local.py
backend/tests/: __init__.py  conftest.py  db_helpers.py  test_app_factory.py  test_bulk_pipeline.py  test_bulk_repo.py  test_bulk_router.py  test_bulk_service.py  test_categories.py  test_chunker.py  test_classifier.py  test_classify_router.py  test_config.py  test_config_fields_router.py  test_config_router.py  test_connection.py  test_decorators.py  test_document_repository.py  test_document_service.py  test_document_service_state.py  test_document_tools.py  test_documents_router.py  test_event_bus.py  test_extract_router.py  test_extraction_results_repo.py  test_extraction_service.py  test_extractor.py  test_gates.py  test_health.py  test_ingest_router.py  test_ingestion_service.py  test_judge.py  test_long_term_memory.py  test_migration.py  test_models.py  test_orchestrator.py  test_parse_router.py  test_parse_service.py  test_pii_filter.py  test_pipeline_runner.py  (+14 more)
backend/tests/evals/: __init__.py  conftest.py  test_analytics.py  test_classification.py  test_evaluators_metric_based.py  test_evaluators_sql.py  test_evaluators_trajectory.py  test_extraction.py  test_pipeline.py  test_rag.py  (+2 more)
langgraph-checkpoint-asyncpg/: LICENSE  README.md  pyproject.toml
langgraph-checkpoint-asyncpg/tests/: conftest.py  test_migrations.py  test_saver.py  test_schema_compat.py
(+339 files in other folders)
