[project]
name = "langgraph-checkpoint-asyncpg"
version = "0.1.0"
description = "asyncpg-backed LangGraph checkpointer (Apache-2.0, no psycopg dependency)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "document-intelligence-adv-v2" },
]
keywords = ["langgraph", "checkpoint", "postgres", "asyncpg"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "langgraph-checkpoint>=2.0,<3.0",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "testcontainers[postgresql]>=4.8",
    "langgraph>=0.2",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_asyncpg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
